classDiagram
    class Usuari {
        +nom: String
        +correuElectronic: String
        +contrasenya: String
    }

    class Client {
        +cercarEsdeveniments()
        +comprarEntrada()
    }

    class Administrador {
        +crearEsdeveniment()
        +modificarEsdeveniment()
        +eliminarEsdeveniment()
    }

    class Esdeveniment {
        +nom: String
        +descripcio: String
        +data: Date
        +ubicacio: String
        +entradesDisponibles: int
    }

    class Entrada {
        +preu: float
        +estat: String  <<Disponible | Venuda>>
    }

    Usuari <|-- Client
    Usuari <|-- Administrador

    Administrador "1" --> "0..*" Esdeveniment : gestiona
    Esdeveniment "1" --> "1..*" Entrada : te
    Client "1" --> "0..*" Entrada : compra
